Changelog
---------

    (name of developer listed in brackets)

plone.app.linkintegrity - 1.0.13 Unreleased

    - Also regard traversal adapters when trying to resolve links into their
      corresponding objects.
      [witsch]

    - Fix some tests to make sure that text values are treated as text/html
      in Zope 2.12, whose zope.contenttype is stricter when guessing the
      mimetype.
      [davisagli]

    - Don't install the exception hook in Zope 2.12 where it is no longer
      needed and breaks exception handling.
      [davisagli]

plone.app.linkintegrity - 1.0.12 Released June 3, 2009

    - Compare UIDs instead of objects during cleanup of breach information in
      order to avoid expensive hashing in "... in ..." expressions.  This
      makes removing linked objects much faster.
      [regebro]

plone.app.linkintegrity - 1.0.11 Released November 15, 2008

    - Fix code to not silently swallow `ConflictErrors`.
      [witsch]

    - Fix issue with dangling references to already removed objects.
      Fixes http://dev.plone.org/plone/ticket/8349 and
      http://dev.plone.org/plone/ticket/8390.
      [witsch]

plone.app.linkintegrity - 1.0.10 Released July 7, 2008

    - Fixed the recognizing of links to files (or any object) with a
      space in the id.  Fixes #8167.
      [maurits]

    - Updated tests to work with LinguaPlone by unmarking the creation
      flag on new objects.
      [maurits]

plone.app.linkintegrity - 1.0.9 Released May 8, 2008

    - Use acquisition API to support the "philikon-aq" branch.
      [witsch]

    - Fix a problem with updating link integrity references during a
      request which trying to delete multiple other objects.
      [witsch]

plone.app.linkintegrity - 1.0.8 Released April 21, 2008

    - Added missing i18n markup to `confirmation.pt`, also fixing
      http://dev.plone.org/plone/ticket/7995.
      [witsch]

plone.app.linkintegrity - 1.0.7 Released March 27, 2008
